# VIMP

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists-higherlevel.txt  CMakeLists.txt  INSTALL.md  Kt_sdf.csv  LICENSE  README.md  Sk_sdf.csv  WAMDeskDataset.json  build_GVIMP_modules.py  dt_sdf.csv  gpmp2.h  mpvi.h  setup.py  single_obstacle.traj  vimp.h  zk_sdf.csv
mpvi/: CMakeLists.txt  Doxyfile.in  cov.csv  mean.csv  vimp.h
mpvi/data/: cov.csv  map_ground_truth.csv  mean.csv
mpvi/html/: GaussHermite_8h_source.html  GaussianPriorLinearGetQc_8h.html  GaussianPriorLinearGetQc_8h_source.html  GaussianPriorUnaryTranslation_8h.html  GaussianPriorUnaryTranslation_8h_source.html  MVGsampler_8h_source.html  OptimizerFactorizedGH_8h.html  OptimizerFactorizedGH_8h_source.html  OptimizerFactorizedGaussHermite_8h.html  OptimizerFactorizedGaussHermite_8h_source.html  OptimizerFactorizedGaussianPriorPosVel_8h_source.html  OptimizerFactorizedObstacle2_8h_source.html  OptimizerFactorizedObstaclePlanarPointRobot_8h_source.html  OptimizerFactorizedOneFactorPointRobot_8h_source.html  OptimizerFactorizedPriorCollisionGH_8h_source.html  OptimizerFactorizedPriorCollisionPointRobot_8h.html  OptimizerFactorizedPriorCollisionPointRobot_8h_source.html  OptimizerFactorizedPriorGH_8h.html  OptimizerFactorizedPriorGH_8h_source.html  OptimizerFactorizedPriorPointRobot_8h_source.html  OptimizerFactorized_8h.html  OptimizerFactorized_8h_source.html  OptimizerGH_01ref_8h_source.html  OptimizerGH_8h.html  OptimizerGH_8h_source.html  OptimizerPlanarPointRobotGH_8h.html  OptimizerPlanarPointRobotGH_8h_source.html  OptimizerPriorCollisionGH_8h.html  OptimizerPriorPlanarPointRobot_8h.html  OptimizerPriorPlanarPointRobot_8h_source.html  Optimizer_8h.html  Optimizer_8h_source.html  SparseInverseMatrix_8h.html  SparseInverseMatrix_8h_source.html  SparseMatrixHelper_8h.html  SparseMatrixHelper_8h_source.html  annotated.html  classArgs.html  classGaussHermite-members.html  classGaussHermite.html  (+89 more)
mpvi/include/: GaussHermite-impl.h  GaussHermite.h  GaussianPriorLinearGetQc.h  GaussianPriorUnaryTranslation.h  MVGsampler.h  Optimizer.h  OptimizerFactorized.h  OptimizerFactorizedGH copy.h  OptimizerFactorizedGH.h  OptimizerFactorizedGHBase-impl.h  OptimizerFactorizedGHBase.h  OptimizerFactorizedObstacle2.h  OptimizerFactorizedObstaclePlanarPointRobot.h  OptimizerFactorizedOneFactorPointRobot.h  OptimizerFactorizedPriorCollPR.h  OptimizerFactorizedPriorCollisionGH.h  OptimizerFactorizedPriorCollisionPointRobot.h  OptimizerFactorizedPriorPointRobot.h  OptimizerFactorizedTwoFactorsGH.h  OptimizerGH ref.h  OptimizerGH.h  OptimizerPlanarPointRobotGH.h  OptimizerPriorColPlanarPR.h  OptimizerPriorCollisionGH.h  OptimizerPriorPlanarPR.h  OptimizerPriorPlanarPointRobot.h  SparseInverseMatrix.h  plotPlanarResults.h
mpvi/instances/: CMakeLists.txt  PriorPlanarPR.h
mpvi/latex/: GaussHermite_8h_source.tex  GaussianPriorLinearGetQc_8h.tex  GaussianPriorLinearGetQc_8h_source.tex  GaussianPriorUnaryTranslation_8h.tex  GaussianPriorUnaryTranslation_8h_source.tex  MVGsampler_8h_source.tex  OptimizerFactorizedGH_8h.tex  OptimizerFactorizedGH_8h_source.tex  OptimizerFactorizedGaussHermite_8h.tex  OptimizerFactorizedGaussHermite_8h_source.tex  OptimizerFactorizedGaussianPriorPosVel_8h_source.tex  OptimizerFactorizedObstaclePlanarPointRobot_8h_source.tex  OptimizerFactorizedOneFactorPointRobot_8h_source.tex  OptimizerFactorizedPriorCollisionGH_8h.tex  OptimizerFactorizedPriorCollisionGH_8h_source.tex  OptimizerFactorizedPriorCollisionPointRobot_8h.tex  OptimizerFactorizedPriorCollisionPointRobot_8h_source.tex  OptimizerFactorizedPriorGH_8h.tex  OptimizerFactorizedPriorGH_8h_source.tex  OptimizerFactorizedPriorPointRobot_8h.tex  OptimizerFactorizedPriorPointRobot_8h_source.tex  OptimizerFactorized_8h.tex  OptimizerFactorized_8h_source.tex  OptimizerGH_01ref_8h_source.tex  OptimizerGH_8h.tex  OptimizerGH_8h_source.tex  OptimizerPlanarPointRobotGH_8h.tex  OptimizerPlanarPointRobotGH_8h_source.tex  OptimizerPriorPlanarPointRobot_8h.tex  OptimizerPriorPlanarPointRobot_8h_source.tex  Optimizer_8h.tex  Optimizer_8h_source.tex  SparseInverseMatrix_8h.tex  SparseInverseMatrix_8h_source.tex  SparseMatrixHelper_8h.tex  SparseMatrixHelper_8h_source.tex  annotated.tex  classArgs.tex  classGaussHermite.tex  classGaussianSampler_1_1Gaussian__distribution.tex  (+56 more)
mpvi/optimizer/: GaussHermite-impl.h  GaussHermite.h  OptimizerFactorized.h  OptimizerFactorizedGHBase.h  OptimizerFactorizedTwoFactorsGH.h  SparseInverseMatrix.h
mpvi/src/: main.cpp  test_GH.cpp  test_conv.cpp  test_conv_GH ref.cpp  test_conv_Gaussian_GH ref.cpp  test_conv_Gaussian_GH.cpp  test_conv_factorized.cpp  test_conv_factorized_GH.cpp  test_conv_prior_col_pR.cpp  test_conv_prior_col_pR_gp_inter.cpp  test_conv_prior_pR.cpp  test_gtsam_factor_passage.cpp  test_prior_collision_one_factor_point_robot.cpp  test_prior_gp_inter_pR.cpp  test_sparse_inverse.cpp  test_unary_factror.cpp
mpvi/test/: test_inverser.cpp  test_optimizer.cpp
mpvi/tests/: test_optimizer.cpp
vimp/: Aprior.csv  At.csv  Bt.csv  CMakeCache.txt  CMakeLists-st.txt  CMakeLists-standalone.txt  CMakeLists-whole-sublevel.txt  CMakeLists.txt  CMakeLists_customize.txt  Kt.csv  Lambda_0.csv  Makefile  Mt.csv  Phi11.csv  Phi12.csv  Pit.csv  Qt.csv  README.md  Sigtnew.csv  Skt_new_GT.csv  Vddmu.csv  X0.csv  Xt.csv  at.csv  config.h.in  cov.csv  cov_full.csv  cov_sp.csv  dprecision.csv  dt.csv  j_Vddmu.csv  mean_optimized.csv  nTrt.csv  precision.csv  precision_optimized.csv  s.csv  test_sp_inverse_cov.csv  test_sp_inverse_prec.csv  vimp.h  vimpConfig.cmake  (+2 more)
vimp/base/: BoundaryConditions.h  CMakeLists.txt  Matrix.h
vimp/configs/: planar_2link_arm.xml  planar_2link_arm_map2.xml  planar_3link_arm_map1.xml  planar_pR_map1.xml  planar_pR_map2.xml  planar_pR_map3.xml
vimp/covariance_steering/: CMakeLists.txt  DataBuffer.h  LinearCovarianceSteering.h  PGCSLinDynArmModelPlanarSDF.h  PGCSLinDynArmPlanarSDF.h  PGCSLinDynArmSDF copy.h  PGCSLinDynArmSDF.h  PGCSLinDynPRModelPlanarSDF.h  PGCSLinDynPRModelSDF copy1.h  PGCSPlanarQuadSDF.h  (+13 more)
(+210587 files in other folders)
